--- a/scripts/config.yml
+++ b/scripts/config.yml
@@ -1,5 +1,5 @@
 data:
-  data_dir: 'data'
+  data_dir: 'data/mini'
   train_path: 'train.tsv'
   valid_path: 'test.tsv'
 
@@ -7,7 +7,7 @@ train:
   epochs: 1000
   episodes: 100
   episode:
-    classification_cardinality: 60 # number of classes per episode
+    classification_cardinality: 10 # number of classes per episode
     shots: 5 # the number of labelled samples per class ("support vectors")
     queries: 5 # the number of unlabelled samples per class ("query vectors"); they need to be classified in the right class
   optimization:
