zeroing the gradients

--- a/scripts/config.yml
+++ b/scripts/config.yml
@@ -1,17 +1,17 @@
 data:
   data_dir: 'data/mini'
   train_path: 'train.tsv'
-  valid_path: 'test.tsv'
+  valid_path: 'valid.tsv'
 
 train:
-  epochs: 1000
+  epochs: 10000
   episodes: 100
   episode:
     classification_cardinality: 10 # number of classes per episode
     shots: 5 # the number of labelled samples per class ("support vectors")
     queries: 5 # the number of unlabelled samples per class ("query vectors"); they need to be classified in the right class
   optimization:
-    learning_rate: 1.e-3
+    learning_rate: 1.e-5
     decay_every: 20
 
 model:
